crates/plotnik-tests/tests/02-parser/recovery_validation/captured_anchor.txt
Q = (call (a) . @x (b))
------------------ DIAGNOSTICS -------------------
error: anchors cannot be captured
 --> query.ptk:1:17
  |
1 | Q = (call (a) . @x (b))
  |                 ^^
  |
help: remove the capture
  |
1 - Q = (call (a) . @x (b))
1 + Q = (call (a) .  (b))
  |
help: anchors constrain position and produce no value
